Fixed unneeded error message in Render Animation.

BUG:412599

This patch fixes the error that the user gets when he tries to
render the anim in Image Sequence mode by setting the video encoding
option as Mp4.